Revert "Fix nowrap issues in Chrome #744"
This reverts commit 6923d884043c0c831f11baa8d14aa66e803c2522.

--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -3,8 +3,6 @@
 }
 .sidebarred-main-content {
   flex: 1;
-  /* To prevent nowrap issues in Chrome */
-  width: 100%;
 }
 .sidebar {
   width: 200px;
